[tool.poetry]
name = "acrloader"
version = "0.0.0"
description = "Loads data from ACRCloud's broadcast monitoring and stores it in ownCloud."
authors = ["RaBe IT Reaktion <it@rabe.ch>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.scripts]
acrloader = 'main:main'

[tool.poetry.dependencies]
python = "^3.11"
acrclient = "^0.5.1"
configargparse = "^1.7"
pyocclient = "^0.6"
requests = "^2.32"
tqdm = "^4.67.1"
minio = "^7.2.18"
cachecontrol = "^0.14.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.10"
mypy = "^1.19.1"
types-tqdm = "^4.67.0.20250809"
pytest-random-order = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-freezer = "^0.4.9"
pytest-mypy = "^1.0.1"
pytest-ruff = "^0.5"
requests-mock = "^1.12.1"
mkdocs = "^1.6.1"
mkdocs-autorefs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}
mkdocs-material = "^9.7.0"
mkdocs-gen-files = "^0.6.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-section-index = "^0.3.10"
pre-commit = "^4.5.1"
types-urllib3 = "^1.26.25.14"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q", "--random-order", "--doctest-glob='*.md'", "--doctest-modules", "--ignore=docs/", "--cov=main", "--cov-fail-under=100", "--ruff", "--mypy"]
filterwarnings = ["ignore::DeprecationWarning:pytest_freezegun"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
